--- a/src/vladyslavs-main.theme.css
+++ b/src/vladyslavs-main.theme.css
@@ -16,7 +16,7 @@
 	--v-margin-top: calc(var(--v-app-offset) / 2);
 	--v-ui-gap-between: 15px;
 	--v-call-background: transparent;
-  	--v-background: url(https://i.pinimg.com/originals/be/e6/3b/bee63b6759667a1384b39dcd7df8396a.jpg);
+  	--v-background: url(https://windowscustomization.com/wp-content/uploads/2019/06/Somewhere-Down-the-Line.gif);
 	--background-primary: var(--v-accent-color) !important;
 	--background-secondary: var(--v-accent-color) !important;
 	--channelbodyarea-background: var(--v-accent-color) !important;
@@ -42,6 +42,8 @@
 	--button-positive-background-hover: var(--v-button-hover) !important;
 	--button-positive-background-active: var(--v-button-hover) !important;
 	--background-message-hover: var(--v-message-hover) !important;
+	--text-link: var(--v-status-color) !important;
+	--brand-500: var(--v-status-color) !important;
 }
 
 .typeWindows__5fa63 {
@@ -127,6 +129,10 @@
 	background: transparent !important;
 }
 
+.wrapper_bd2abe {
+	border-radius: var(--v-radius-ui) !important;
+}
+
 .callContainer_cbde45 {
 	background: var(--v-call-background, transparent) !important;
 }
@@ -136,7 +142,8 @@
 .sidebar_ded4b5,
 .wrapper_a7e7a8,
 .chatContent__5dca8,
-.members__9f47b {
+.members__9f47b,
+.container__11d72 {
 	border-radius: var(--v-radius-ui, 16px) !important;
 }
 
@@ -254,6 +261,32 @@ body {
 	border-radius: 10px;
 	clip: rect(auto,auto,68px,auto);
 }
+
+
+/* Christmas update :3 */
+
+.userPopoutInner_f545a3::after {
+	content: " ";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: url(https://www.animationsoftware7.com/img/agifs/snow02.gif);
+	background-size: cover;
+	pointer-events: none;
+}
+
+.avatarWrapper_f77579::after {
+	content: " ";
+	width: 75px;
+	height: 75px;
+	position: absolute;
+	top: -35%;
+	right: -10px;
+	background: url(https://i.pinimg.com/originals/af/a6/55/afa655cd471aee57e0b923b90e5d57bf.png);
+	background-size: cover;
+}
+
+/* End */
 
 .avatarWrapper_f77579 svg foreignObject {
 	mask: none !important;
